2012-01-04 Wed  Jari Aalto  <jari.aalto@cante.net>

	* epackage.el (epackage--license-abbreviation-list): Rename.
	Was `epackage--info-mode-license-list'.
	(epackage-devel-compose-package-dir): Check lib-* package.
	(epackage-package-name-library-p): Correct function.

2012-01-03 Wed  Jari Aalto  <jari.aalto@cante.net>

	* epackage.el (epackage-date): New.
	(epackage-lint-extra-buffer-main): Add Emacs version to lint log.
	Correct extra checks.
	(epackage-lint-extra-buffer-run-lm): Adjust pure numric message
	to warning.
	(epackage-lint-extra-checkdoc-advice): Remove.
	(epackage-lint-extra-buffer-checkdoc-cleanup): New.
	(epackage-batch-devel-lint-lisp): Add directoried to load-path.
	(epackage-with-load-path-recursive): New.
	(epackage-byte-compile-package-guess): Simplify.

2012-01-03 Tue  Jari Aalto  <jari.aalto@cante.net>

	* epackage.el (top level): standardize headers.
	(epackage-mail-macro): Emacs 24 fix. Turn on `message-mode'.
	(epackage-lint-extra-file): New defalias.
	(epackage-lint-extra-buffer-main): New defalias.

2012-01-02 Tue  Jari Aalto  <jari.aalto@cante.net>

	* epackage.el (epackage-batch-devel-lint-lisp): New.

2012-01-02 Mon  Jari Aalto  <jari.aalto@cante.net>

	* epackage.el (epackage-lint-extra-buffer-main): Turn on
	`outline-minor-mode'.
	(epackage-lint-extra-buffer-run-lm): Reorder checks.
	(epackage-lint-extra-buffer-main): Fix bug which inserted
	results into current buffer.
	(epackage-line-number): New.
	(epackage-lint-extra-buffer-run-other-keybindings): New.
	(epackage-lint-extra-buffer-run-other-main): Rewrite
	using nconc.

2011-12-31 Sat  Jari Aalto  <jari.aalto@cante.net>

	* epackage.el (epackage-lint-extra-buffer-run-other-main):
	Rewrite.
	(epackage-lint-extra-buffer-run-other-autoload): New.
	(epackage-devel-information-description-short): Check -*- stanzas.
	(epackage-devel-information-date-lm): Add Last-Modified.
	(epackage-devel-information-license-gpl-standard): Improve regexps.